syntax = "proto3";

package cmrd.v1;

option go_package = "github.com/jhonroun/cmrd/internal/grpcapi/pb;pb";

service CMRDService {
  rpc ResolveLinks(ResolveLinksRequest) returns (ResolveLinksResponse);
  rpc StartDownload(StartDownloadRequest) returns (StartDownloadResponse);
  rpc GetProgress(GetProgressRequest) returns (GetProgressResponse);
  rpc SubscribeProgress(GetProgressRequest) returns (stream GetProgressResponse);
  rpc StopJob(StopJobRequest) returns (StopJobResponse);
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
}

message ResolveLinksRequest {
  repeated string links = 1;
}

message ResolvedFile {
  string url = 1;
  string output = 2;
}

message ResolveLinksResponse {
  repeated ResolvedFile files = 1;
}

message StartDownloadRequest {
  repeated string links = 1;
  string download_dir = 2;
}

message StartDownloadResponse {
  string job_id = 1;
}

message GetProgressRequest {
  string job_id = 1;
}

message GetProgressResponse {
  string job_id = 1;
  string phase = 2;
  float percent = 3;
  string message = 4;
  bool done = 5;
  string error = 6;
}

message StopJobRequest {
  string job_id = 1;
}

message StopJobResponse {
  bool stopped = 1;
}

message ListJobsRequest {}

message JobInfo {
  string job_id = 1;
  string phase = 2;
  float percent = 3;
  string message = 4;
  bool done = 5;
  string error = 6;
}

message ListJobsResponse {
  repeated JobInfo jobs = 1;
}
